--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="Equip_Gun_N.cpp" />
     <ClCompile Include="Equip_Gun_R.cpp" />
     <ClCompile Include="Equip_Gun_S.cpp" />
+    <ClCompile Include="Equip_PlayerGunBase.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
@@ -285,6 +286,7 @@
     <ClInclude Include="Equip_Gun_L.h" />
     <ClInclude Include="Equip_Gun_R.h" />
     <ClInclude Include="Equip_Gun_S.h" />
+    <ClInclude Include="Equip_PlayerGunBase.h" />
     <ClInclude Include="fmod\fmod.h" />
     <ClInclude Include="fmod\fmod.hpp" />
     <ClInclude Include="fmod\fmod_codec.h" />
