--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -202,10 +202,10 @@
     <ClCompile Include="Game_SweeperBlock.cpp" />
     <ClCompile Include="Game_Terrain.cpp" />
     <ClCompile Include="Game_TestBox.cpp" />
-    <ClCompile Include="Game_Upgrade.cpp" />
-    <ClCompile Include="Game_UpgradeBase.cpp" />
-    <ClCompile Include="Game_UpgradeBoxBase.cpp" />
-    <ClCompile Include="Game_UpgradeBox.cpp" />
+    <ClCompile Include="Obj_Upgrade.cpp" />
+    <ClCompile Include="Obj_UpgradeBase.cpp" />
+    <ClCompile Include="Obj_StationUpgradeBox.cpp" />
+    <ClCompile Include="Obj_FlyingUpgradeBox.cpp" />
     <ClCompile Include="Game_Water.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MusicManager.cpp" />
@@ -248,6 +248,7 @@
     <ClCompile Include="State_Object_Active.cpp" />
     <ClCompile Include="State_Object_Base.cpp" />
     <ClCompile Include="State_Object_Emerge.cpp" />
+    <ClCompile Include="State_Object_Hide.cpp" />
     <ClCompile Include="State_Object_Standby.cpp" />
     <ClCompile Include="State_Station.cpp" />
     <ClCompile Include="State_Station_Hide.cpp" />
@@ -324,10 +325,10 @@
     <ClInclude Include="Game_SweeperBlock.h" />
     <ClInclude Include="Game_Terrain.h" />
     <ClInclude Include="Game_TestBox.h" />
-    <ClInclude Include="Game_Upgrade.h" />
-    <ClInclude Include="Game_UpgradeBase.h" />
-    <ClInclude Include="Game_UpgradeBoxBase.h" />
-    <ClInclude Include="Game_UpgradeBox.h" />
+    <ClInclude Include="Obj_Upgrade.h" />
+    <ClInclude Include="Obj_UpgradeBase.h" />
+    <ClInclude Include="Obj_StationUpgradeBox.h" />
+    <ClInclude Include="Obj_FlyingUpgradeBox.h" />
     <ClInclude Include="Game_Water.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="MusicManager.h" />
@@ -370,6 +371,7 @@
     <ClInclude Include="State_Object_Active.h" />
     <ClInclude Include="State_Object_Base.h" />
     <ClInclude Include="State_Object_Emerge.h" />
+    <ClInclude Include="State_Object_Hide.h" />
     <ClInclude Include="State_Object_Standby.h" />
     <ClInclude Include="State_Station.h" />
     <ClInclude Include="State_Station_Hide.h" />
