--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -374,6 +374,14 @@
     <ClCompile Include="Obj_BossBase_S1.cpp">
       <Filter>Source Files\Object\StaticObject</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy_AlienBase_Head.cpp">
+      <Filter>Source Files\Object\MoveObject\Character\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Obj_EnemyBullet_Blast.cpp">
+      <Filter>Source Files\Object\MoveObject\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="Equip_EnemyGun_AlienBase.cpp" />
+    <ClCompile Include="Obj_BossAlienBase_S3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -788,6 +796,14 @@
     <ClInclude Include="Enemy_AlienBase_HandCell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Obj_EnemyBullet_Blast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy_AlienBase_Head.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Equip_EnemyGun_AlienBase.h" />
+    <ClInclude Include="Obj_BossAlienBase_S3.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
