--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -234,6 +234,7 @@
     <ClCompile Include="QuadTree\SimpleVector.cpp" />
     <ClCompile Include="Scene_Base.cpp" />
     <ClCompile Include="Scene_Battle.cpp" />
+    <ClCompile Include="Scene_Credit.cpp" />
     <ClCompile Include="Scene_GameOver.cpp" />
     <ClCompile Include="Scene_LoadingStage.cpp" />
     <ClCompile Include="Scene_Start.cpp" />
@@ -370,6 +371,7 @@
     <ClInclude Include="QuadTree\SimpleVector.h" />
     <ClInclude Include="Scene_Base.h" />
     <ClInclude Include="Scene_Battle.h" />
+    <ClInclude Include="Scene_Credit.h" />
     <ClInclude Include="Scene_GameOver.h" />
     <ClInclude Include="Scene_LoadingStage.h" />
     <ClInclude Include="Scene_Start.h" />
